# ClothSimulation-OpenGL

./: .gitmodules  CMakeLists.txt  README.md
Dependencies/GLAD/include/glad/: glad.h
Dependencies/GLAD/src/: glad.c
src/: CMakeLists.txt  Camera.cpp  Camera.h  Cloth.cpp  Cloth.h  Cube.cpp  Entity.cpp  Entity.h  Shader.cpp  Shader.h  Sphere.cpp  Window.cpp  Window.h  main.cpp
src/Shaders/: BasicFragmentShader.glsl  LightVertexShader.glsl
